added more stuff

--- a/background.html
+++ b/background.html
@@ -42,4 +42,9 @@ will be presented in the next section. If you already know calculus you can skip
 <li><a href="./capacitors.html">Capacitors</a></li>
 <li><a href="./RC.html">Resistor Capacitor</a></li>
 <li><a href="magnetics.html">Magnetics</a></li>
+<li><a href="inductors.html">Inductors</a></li>
+<li><a href="reactance-impedance.html">Reactance and Impedance</a></li>
+<li><a href="diodes.html">Diodes</a></li>
+<li><a href="bjt.html">Bipolar Junction Transistor</a></li>
+<li><a href="mosfet.html">MOSFETs</a></li>
 </ol>
