--- a/capacitors.html
+++ b/capacitors.html
@@ -25,8 +25,8 @@ plates is negatively charged. This happens nearly instanously while the
 voltage source is being connected. Once this process is complete, the circuit is in steady state, no charge moves, and no current
 flows. 
 <p/>
-The equation for a capacitor in this steady state is shown below.
-Q = CV
+The equation for a capacitor in this steady state is shown below. <br>
+Q = CV <br>
 Note Q is technically the absolute value of the charge.
 As the equation shows, there are two things that allow more charge to accumulate onto a 
 capacitor. Either a higher value of capacitance, that is more room for charge. Or a 
@@ -43,6 +43,18 @@ across it multiplied by its capacitance. The most basic example of this is a ram
 across a capacitor. If the ramp is linear, then there will be a constant current through the
 capacitor. Likewise, a constant current into a capacitor will lead to a constantly
 ramping voltage.  
+</p>
+<b> Capacitors in Parallel and Series </b>
+<p>
+Like resistors, you can also reduce series and parallel combinations of resistors. 
+The series reduction formula is as follows: <br>
+Ceq = 1/(1/C1 + 1/C2 + ...) <br>
+And the parrallel reduction formula: <br>
+Ceq = C1 + C2 + ... <br>
+As you can see, this is opposite of how resistors are reduced. I won't bother deriving these 
+here, but it is fairly self evident why this is the case for parallel capacitors, and a little
+less self evident for series. So you can think about it.
+</p>
 </p>
 <a href="./resistor-circuits.html">Back</a>
 <a href="./RC.html">Next</a>
