--- a/reactance-impedance.html
+++ b/reactance-impedance.html
@@ -10,4 +10,11 @@
 </style>
 </head>
 <h2> Reactance and Impedance </h2>
-
+<b> AC </b>
+<p>
+So far we have been mostly dealing with DC voltage sources. This 
+is where the voltage is constant. There are also AC voltage sources.
+This is where the voltage is a sign wave.
+</p>
+<a href="./inductors.html">Back</a>
+<a href="./diodes.html">Next</a>
