--- a/inductors.html
+++ b/inductors.html
@@ -31,6 +31,7 @@ the change in current through it. This is because a changing current leads to a
 changing magnetic field, and a changing magnetic field induces a voltage. 
 </p>
 <b> Inductors In Some Basic Circuits </b>
+<p>
 If you put an inductor in parallel with a voltage source it will lead to an infinitly 
 increasing current (in reality the inductor will saturate). This is basically a short
 circuit so it is recommended that you don't try this. 
@@ -41,5 +42,10 @@ in parallel with a current source as long as the current source is constant.
 You can also build RL circuits like you can build RC circuits. However, these are not
 used as often do to capacitors being more ideal and common than inductors. You can look
 these up or figure them out if you are interested. 
+</p>
+<b> Inductors in Parallel and Series </b>
+<p>
+Inductors in parrallel and series follow the same rules as resistors in parrallel in series, just inductors instead. 
+</p>
 <a href="./magnetics.html">Back</a>
 <a href="./reactance-impedance.html">Next</a>
