--- a/mathematics.html
+++ b/mathematics.html
@@ -41,13 +41,22 @@ A derivative is function that expresses the rate of change of another function. 
 values into a functions derivative will return the rate of change of the function at that
 x value. There are 3 derivatives that come up often in electronics. The first is the derivative
 of a linear function. By definition, a linear function has a constant rate of change. So the 
-derivative of a linear function is simply a constant. The second is exp(x) the derivative of
-exp(x) is also exp(x). This is evident by looking at the graph. The third function is a sinusoid (sin(x) and cos(x). The derivative of a sinusoid is also a sinusoid, but it is phase shifted
+derivative of a linear function is simply a constant.
+</p>
+<img src="./pictures/linear-derivative.png"></img>
+<p>
+ The second is exp(x) the derivative of
+exp(x) is also exp(x). This is evident by looking at the graph.
+</p>
+<img src='./pictures/exponential-derivative.png'></img>
+<p>
+ The third function is a sinusoid (sin(x) and cos(x). The derivative of a sinusoid is also a sinusoid, but it is phase shifted
 by 90 degrees. The maximum rate of change of a sinusoid occurs at the zero crossing so this 
 where the maximum of the derivative will be. The minimum rate of change occurs at the peak. 
 Likewise this will be the minimum of the derivative. This will lead to a 90 degree phase 
 shift between the sinusoid and its derivative. 
 </p>
+<img src='./pictures/sinusoid-derivative.png'></img>
 <b> Integral </b>
 <p>
 An integral is the signed area under a function within some bounds (technically a definite integral). An integral of a constant is the area of a rectangle. Also for a constant function, If you take one of the bounds and
@@ -55,5 +64,7 @@ move it, then plot the integral at each x as a function you will get a linear fu
 The integral of a sine wave with bounds that extend though many periods is zero. The negative
 area is equal to the positive area.  
 </p>
+<img src="./pictures/constant-integral.png"></img>
+<p></p>
 <a href="./background.html">Back</a>
 <a href="./electricity.html">Next</a>
