--- a/background.html
+++ b/background.html
@@ -9,30 +9,29 @@
     }
 </style>
 </head>
+<h1> Root Electronics </h1>
 <b>What is this?</b>
 <p>
-So there don't seem to be many good resources on the internet to learn basic circuit theory,
-or honestly much on electronics at all. If you want to teach your self this stuff you currently
-you will probably have to resort to buying books, and even with this approach you have to
-make sure you buy the right books which can be a difficult task. In summary, there currently
-just isn't much quality information to learn about electronics despite it being a relatively
-approachable subject. This is my attempt to fix this issue. 
+So there don't seem to be many good resources on the internet to learn about electronics. 
+If you want to learn electronics,
+you will probably have to resort to buying books, and you have to
+make sure you buy the right books, and many of them are crap. Despite this I still think electronics is a relatively approachable subject. 
+This is my attempt to write a better guide on the core of electronics. 
 </p>
 
 <b>What is electronics</b> 
 <p>
-I like the definition given on the electronics wikipedia article, so you can go and read that.
-But, basically, electronics is any application of electricity that involves active devices.
-That is, devices that use an electric signal to amplify or control an another electric signal. It so happens that this manipulation of electricity is present in much of modern technology.
+I like the definition given on the electronics wikipedia article. So you can go and read that.
+But basically, electronics is any application of electricity that involves active devices.
+That is, devices that use an electric signal to amplify or control another electric signal. 
+It so happens that this manipulation of electricity is used in much of modern technology (It almost is modern technology).
 </p>
 
 <b>Necessary Background</b>
 <p>
-You should know basic high school algebra. If you don't know basic high school algebra there
-are many quality online resources to teach you. Some ideas from calculus are also necessary 
-in electronics. I started learning electronics before formally learning calculus. This is 
-written for my self when I first started learning electronics. The necessary calculus material
-will be presented in the next section. If you already know calculus you can skip this. 
+You should know basic high school algebra. Some ideas from calculus are also necessary. 
+I started learning electronics before formally learning calculus. Given this, the necessary calculus material
+is in the first section. If you already know calculus you can skip this. 
 </p>
 <b> Pages </b>
 <ol>
@@ -43,7 +42,6 @@ will be presented in the next section. If you already know calculus you can skip
 <li><a href="./RC.html">Resistor Capacitor</a></li>
 <li><a href="magnetics.html">Magnetics</a></li>
 <li><a href="inductors.html">Inductors</a></li>
-<li><a href="reactance-impedance.html">Reactance and Impedance</a></li>
 <li><a href="diodes.html">Diodes</a></li>
 <li><a href="bjt.html">Bipolar Junction Transistor</a></li>
 <li><a href="mosfet.html">MOSFETs</a></li>
