--- a/diodes.html
+++ b/diodes.html
@@ -13,15 +13,15 @@
 <b> Semiconductors </b>
 <p>
 So we have finally covered passive components. Now we can get into some real
-electronics. For real electronics we need semiconducotrs. A semiconductor material
-is basically a materical that changes its conductivity (resistance) based on another
-quantity, voltage/temperature. A semiconductor component is an electrical component 
-that exploits this.
+electronics. For real electronics we need semiconductors. A semiconductor material
+is basically a material that changes its conductivity (resistance) based on another
+quantity: voltage, temperature, etc. A semiconductor component is an electrical component 
+that exploits this behavior.
 </p>
 <b> IV Curve </b>
 <p>
-This is a usefull tool for understanding semiconductor behavior. Basically we sweep
-a voltage across a component while also measureing the current throught it. Then the 
+This is a useful tool for understanding semiconductor behavior. Basically we sweep
+a voltage across a component while also measuring the current through it. Then the 
 voltage is plotted on the X axis and the current is plotted on the Y axis. The IV
 curve for a resistor is linear: 
 </p>
@@ -33,12 +33,11 @@ tracer:
 <p>
 As can be observed, the no current flows through diode until the voltage is ~0.7V in
 the positive axis. A diode is in some sense a one way conductor. Current will only 
-flow in one direction throught the diode. Additionally, a diode also has a forward voltage;
+flow in one direction through it. Additionally, a diode also has a forward voltage;
 if the voltage across the diode does not exceed the forward voltage then current will not 
 flow even in the diodes forward direction. As can be obvserved from the curve trace, 
 this forward voltage is only an approximation, and really the current through a diode is a 
-steep exponential function of the voltage across it. This steep exponential function
-can be approximated with a curve trace. 
+steep exponential function of the voltage across it.
 </p>
-<a href="./reactance-impedance.html">Back</a>
+<a href="./inductors.html">Back</a>
 <a href="./bjt.html">Next</a>
