--- a/electricity.html
+++ b/electricity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mathematics</title>
+<title>Electricity</title>
 <style>
     body {
         font-family:FreeMono;
@@ -10,44 +10,39 @@
 </style>
 </head>
 <h2> Electricity </h2>
-<b>What is Electricity?</b>
 <p>
-Electricity is movement and distribution of electric charge. 
+Electricity is the movement and distribution of electric charge. 
 </p>
-<b>What is Charge?</b>
+<b>Charge</b>
 <p>
-Charge is a fundamental property of matter much like mass. Unlike mass, charge has a polariry
-or sign. Fortunaly for humans, charge 
-can be moved around and manipulated much easier than mass can. 
+Charge is a fundamental property of matter much like mass. Unlike mass, charge has a polarity
+or sign. Fortunately for humans, charge can be moved around and manipulated much easier than mass can. 
 </p>
 <b>How Does Charge Move?</b>
 <p>
 Charge is carried by charge carriers. Often times these are electrons, but they don't have 
-to be. It is important to know that charge propagates through a system via the charge 
+to be. Charge can only move well in conductive materials. 
+It is important to know that charge propagates through a conductor via the charge 
 carriers, but the flow of charge carrier is not equivalent to the flow of charge. When current
 flows in a wire it moves very quickly, but the individual electrons do not. 
 </p>
-<b>What is Current</b>
+<b>Current</b>
 <p>
-Current is the amount of charge crossing an imaginary cross section per unit time. The more charge is flowing the more current there will be if the area it is flowing through is held 
-constant. Current is the rate of change of charge with respect to time (derivative) through a constant area. 
+Current is the amount of charge crossing a cross section per unit time. The more charge is flowing through a constant area, the more current there will be. 
+Current is the rate of change of charge with respect to time (derivative) through a constant area. 
 </p>
-<b>What Determines Current</b>
-<p>
-Current is determined by voltage and resistance. 
-</p>
-<b>What is Voltage</b>
+<b>Voltage</b>
 <p>
 Voltage is the pushing pressure that is applied to charge in a circuit. Voltage is always measured between two points.
 </p>
 <b>What is Resistance</b>
 <p>
 Resistance is a property of materials that determines how easy it is for charge to move through them. 
-It takes work to move charge through a resitance, or to put current through a resistance (same thing). 
+It takes work to move charge through a resistance, or to make current flow through a resistance (same thing). 
 </p>
-<b>Lumped Element Model</b>
+<b>Circuit Components (Lumped Element Model)</b>
 <p>
-When we design and build circuits it is helpfull to represent them using a lumped element model. 
+When we design and build circuits it is helpful to represent them as components connected together. 
 A lumped element model breaks circuits into components that have given electrial properties.
 This idea is also key to how circuits are built and circuit components are sold. For example, say we
 want to build a circuit with a certain resistance. We could buy a chunk of carbon, calculate the geometry necissary
@@ -55,7 +50,7 @@ for the resistance, and machine the carbon to built the resistance that we want.
 I can simply order a resistor from the internet that has the resistance I want. A resistor is a circuit component that
 has a certain component. This approach has a number of advantages:
 <ol>
-<li>It is not necissary to reinvent the wheel every time a new circuit is built. </li>
+<li>It is not necessary to reinvent the wheel (components) every time a new circuit is built. </li>
 <li>There is an abstraction layer between the circuit design and the physical circuit that is built. I can add a resistor
 to my circuit that has a certain resistance without having to know anything about the actual physical resistor that I
 am going to use. Then later, when I move to the physical relization part of the design stage, I can select the actual 
