--- a/inductors.html
+++ b/inductors.html
@@ -11,7 +11,7 @@
 </head>
 <h2> Inductors </h2>
 <p>
-So there is one last passive component to go which is the inductor. The fundemental 
+So there is one last passive non semiconductor component to go which is the inductor. The fundamental 
 equation for inductance is as follows: <br>
 L = φ/I<br>
 Any time current flows through a wire there will be a magnetic field around it. This 
@@ -21,31 +21,30 @@ it relates to magnetic flux linkage: let's look at the consequences of this.
 The other important law involved with inductors is Faradays law. Faradays law states a 
 changing magnetic field induces a voltage. This is stated mathematically: <br>     
 V = dφ/dt (As usual I have skipped a sign convention here. Additionally there is a
-techinical detail I skipped but it shoulden't matter for electronics) <br>
-Quick derivation of equation that is usefull in electronics: <br>
+technical detail I skipped but it shouldn't matter for electronics) <br>
+Quick derivation of equation that is useful in electronics: <br>
 φ = LI <br>
-V = d/dt (LI) <br>
-V = L*(dI/dt) <br>
-As we can see the voltage across an inductor is equal to its inductance times the
+V = d/dt(LI) <br>
+V = L(dI/dt) <br>
+As we can see, the voltage across an inductor is equal to its inductance times the
 the change in current through it. This is because a changing current leads to a 
 changing magnetic field, and a changing magnetic field induces a voltage. 
 </p>
 <b> Inductors In Some Basic Circuits </b>
 <p>
-If you put an inductor in parallel with a voltage source it will lead to an infinitly 
-increasing current (in reality the inductor will saturate). This is basically a short
-circuit so it is recommended that you don't try this. 
+If you put an inductor in parallel with a voltage source it will lead to a linear current 
+that increases to infinity (in reality the inductor will saturate). This is basically a short
+circuit so it's recommended that you don't try this. 
 
 Putting an inductor in parallel with a current source is equivalent with putting a wire
 in parallel with a current source as long as the current source is constant. 
 
 You can also build RL circuits like you can build RC circuits. However, these are not
-used as often do to capacitors being more ideal and common than inductors. You can look
-these up or figure them out if you are interested. 
+often. You can look these up or figure them out if you are interested. 
 </p>
 <b> Inductors in Parallel and Series </b>
 <p>
-Inductors in parrallel and series follow the same rules as resistors in parrallel in series, just inductors instead. 
+Inductors in parallel and series follow the same rules as resistors in parallel in series, just inductors instead. 
 </p>
 <a href="./magnetics.html">Back</a>
-<a href="./reactance-impedance.html">Next</a>
+<a href="./diodes.html">Next</a>
