--- a/magnetics.html
+++ b/magnetics.html
@@ -12,13 +12,13 @@
 <h2> Magnetics </h2> 
 <p>
 So we know that charge has a polarity, like charges repel and unlike charges attract. 
-It has not been mensioned yet, but this idea can be abstracted slightly with a concept 
-of an electric field. Basically, if we know some space is not electricall neutral, that is
+It has not been mentioned yet, but this idea can be abstracted slightly with the concept 
+of an electric field. Basically, if we know some space is not electrically neutral, that is
 there are some locked charges nearby. We can come up with an equation that takes in a point in 
-space and a charge that may be placed at that point in space and outputs the magnetude and 
-direction of the force that this charge would expierence. This is basically what an electric field 
-is, a way to quantify possible electric interactions in an area without actully knowing anything 
-about actull charges. 
+space and a charge that may be placed at that point in space and outputs the magnitude and 
+direction of the force that this charge would experience. This is basically what an electric field 
+is, a way to quantify possible electric interactions in an area without actually knowing anything 
+about actual charges. 
 However, the electric force is not the only way that charges can interact with each other. Moving 
 charges can also interact through the magnetic force. And, likewise with how there is an electric
 field with an electric force, there is a magnetic field with a magnetic force. The only difference, 
