--- a/capacitors.html
+++ b/capacitors.html
@@ -11,27 +11,27 @@
 </head>
 <h2> Capacitors </h2>
 <p>
-The next component we will look at is capacitors. Fundamentaly, a capacitor
-is two metal plates seperated by a diaelectric or insulating material.
-What happens when we apply a voltage source across a capacitor?
+The next component we will look at is capacitors. Fundamentally, a capacitor
+is two metal plates separated by a dielectric or insulating material.
+What happens when we apply a voltage source across a capacitor like so?
 </p> 
 <img src="./pictures/capacitor-voltage.png"></img>
 <p>
 Before the 
-capacitor is connected, the plates of the capacitor will be neutraly charged.
+capacitor is connected, the plates of the capacitor will be neutrally charged.
 However, once a voltage source is connected, charge will be pushed/pulled as 
-much as possible until one of the plates is positivly charged and one of the 
-plates is negatively charged. This happens nearly instanously while the 
-voltage source is being connected. Once this process is complete, the circuit is in steady state, no charge moves, and no current
+much as possible until one of the plates is positively charged and one of the 
+plates is negatively charged. This happens nearly instantly while the 
+voltage source is being connected. Once this connection is complete, the circuit is in steady state, no charge moves, and no current
 flows. 
 <p/>
 The equation for a capacitor in this steady state is shown below. <br>
 Q = CV <br>
-Note Q is technically the absolute value of the charge.
+(Note: Q is technically the absolute value of the charge)
 As the equation shows, there are two things that allow more charge to accumulate onto a 
 capacitor. Either a higher value of capacitance, that is more room for charge. Or a 
 higher voltage, that is more force pushing the charge onto the plates. 
-As already menchened, when the voltage across a capacitor is constant, there won't be
+As already mentioned, when the voltage across a capacitor is constant, there won't be
 any current through it, so it won't be doing anything. A capacitor in steady state is basically 
 an open circuit. To find out the transient 
 behavior of a capacitor we can differentiate the equation above with respect to time.
@@ -46,10 +46,10 @@ ramping voltage.
 </p>
 <b> Capacitors in Parallel and Series </b>
 <p>
-Like resistors, you can also reduce series and parallel combinations of resistors. 
+Like resistors, you can also reduce series and parallel combinations of capacitors. 
 The series reduction formula is as follows: <br>
 Ceq = 1/(1/C1 + 1/C2 + ...) <br>
-And the parrallel reduction formula: <br>
+And the parallel reduction formula: <br>
 Ceq = C1 + C2 + ... <br>
 As you can see, this is opposite of how resistors are reduced. I won't bother deriving these 
 here, but it is fairly self evident why this is the case for parallel capacitors, and a little
