--- a/mathematics.html
+++ b/mathematics.html
@@ -12,23 +12,8 @@
 <h2> Mathematics </h2>
 <b> What is Mathematics </b>
 <p>
-Before I go into the calculus stuff, here is a short my take on the philosophy and utility
-of mathematics. Mathematics boils down into two things:
-<ol>
-<li><p>A maximally concise, universal, generalizable, and precise language with which to express ideas. </p></li> 
-<li><p>A formal procedure that can make people behave like computers</p></li>
-</ol>
-
-I don't want to claim that #2 is not useful. However, these days 
-it is only useful in semi trivial cases. If you find yourself doing a long computation to solve
-a problem, you should probably ask if the long computation is actually necessary. Often times 
-it can be simplified into a short trivial computation. If the long computation is 
-necessary, then you are probably better off having a computer do it as this is what computers
-are good for (You will have to know #1 to program the computer to do it). 
-
-Now to #1. #1 is also extremely useful. Knowing the language of mathematics will enable 
-you to understand ideas that you cannot understand without knowing the language of mathematics.
-You cannot learn electronics without knowing some ideas from calculus and algebra. Unfortunately, #1 is often completely or mostly overlooked in most formal math classes. 
+In this section only the useful stuff in mathematics is explained. How to solve calculus equations 
+is not explained. Generally, 
 </p>
 <b> Calculus </b>
 <p>
@@ -45,18 +30,18 @@ derivative of a linear function is simply a constant.
 </p>
 <img src="./pictures/linear-derivative.png"></img>
 <p>
- The second is exp(x) the derivative of
-exp(x) is also exp(x). This is evident by looking at the graph.
+ The second is exp(x) The derivative of
+exp(x) is also exp(x). This apparently makes it magical.
 </p>
 <img src='./pictures/exponential-derivative.png'></img>
 <p>
- The third function is a sinusoid (sin(x) and cos(x). The derivative of a sinusoid is also a sinusoid, but it is phase shifted
-by 90 degrees. The maximum rate of change of a sinusoid occurs at the zero crossing so this 
-where the maximum of the derivative will be. The minimum rate of change occurs at the peak. 
+ The third function is a sinusoid (sin(x) and cos(x)). The derivative of a sinusoid is also a sinusoid, but phase shifted
+90 degrees. The maximum rate of change of a sinusoid occurs at the zero crossing so this 
+is where the maximum of the derivative will be. The minimum rate of change occurs at the peak. 
 Likewise this will be the minimum of the derivative. This will lead to a 90 degree phase 
 shift between the sinusoid and its derivative. 
 </p>
-<img src='./pictures/sinusoid-derivative.png'></img>
+<img src='./pictures/sinusoid-derivative.png'></img><br>
 <b> Integral </b>
 <p>
 An integral is the signed area under a function within some bounds (technically a definite integral). An integral of a constant is the area of a rectangle. Also for a constant function, If you take one of the bounds and
