--- a/mosfet.html
+++ b/mosfet.html
@@ -10,12 +10,38 @@
 </style>
 </head>
 <h2> MOSFET </h2>
+<b> Similarities to BJT </b>
 <p> 
-Despite what some people think a mosfet is not its own class of device. It is a type of
-transistor (These people also clearly don't know what MOSFET stands for). Remember how
-a BJT is technically a voltage controlled device? While a mosfet is a "true" voltage 
+Despite what some people think, a MOSFET is a type of transistor (These people also clearly don't know what MOSFET stands for). Remember how
+a BJT is technically a voltage controlled device? While a MOSFET is a "true" voltage 
 controlled device. Like a BJT there are three terminals: gate, source, and drain. Also
-like a bjt, there are two classes of devices: N-Channel and P-Channel (technially there
-are also enhancement mode and depletion mode mosfets, however, no one uses depletion mode).
+like a bjt, there are two classes of devices: N-Channel and P-Channel (technically there
+are also enhancement mode and depletion mode MOSFETs, but no one uses depletion mode).
+</p>
+<b> Differences </b>
+<p>
+One big difference between a MOSFET and a BJT, is that the gate is fully isolated from 
+the drain and the source. That is, there is a complete insulation layer between. This 
+means that if there is a DC voltage signal on the gate, no current will flow into it. This
+is advantageous because we are not wasting any power turning on the MOSFET (At least at steady state). 
+</p>
+<b> How an N-Channel MOSFET Works </b>
+<p>
+With an n-channel MOSFET, applying a voltage to the gate with respect to the source will
+lead to a drain to source current. How much current depends on the gate to source voltage. 
+A good way to quantify this is by looking at the IV curves found on MOSFET datasheets. Below
+you can see one from a 2N7000 MOSFET. 
+</p>
+<p>
+As you can see, at different gate to source voltages, the response is initially linear, so looks 
+like a resistor. Then it flattens out. The key to switching with a MOSFET is making sure you keep
+it in the linear region. If you do this, it is basically a voltage controlled switch with a somewhat
+known on resistance. 
+</p>
+<b> Drain Source On Resistance </b>
+<p>
+The drain to source on resistance is so important when using MOSFETs for switching that it is often 
+given as its own specification. Of course, it is dependent on gate to source voltage and
+other stuff. But, basically, if your on resistance is low, your MOSFET is a better switch.
 </p>
 <a href="./bjt.html">Back</a>
