--- a/resistor-circuits.html
+++ b/resistor-circuits.html
@@ -12,13 +12,12 @@
 <h2>Resistor Circuits</h2>
 <b>Background/Review</b>
 <p>
-Okay, so we previously established that there are two important
-parameters in circuits: voltage and current. We also established
-that some materials have resistance which impedes the flow of 
-current. Additionally, the idea of a lumped element model or circuit
-components was introduced. Now, we will start talking about the
-different types of components and component combinations, and their
-behaviors. This is basically what electronics theory or circuits 
+Okay, so there are two important
+parameters in circuits: voltage and current. Also, materials have resistance which impedes the flow of 
+current. Additionally, everyone breaks circuits into components because it is way easier 
+that way. Now, we will start looking into the
+different types of components and component combinations and their
+behaviors. This is basically what electronics theory or circuit 
 theory is. 
 </p>
 <b> Voltage Sources </b>
@@ -39,7 +38,7 @@ A resistor is a component with a constant resistance. It takes work
 to make current flow through a resistor and the result of this is it
 dissipates power and heats up. Ideally, a resistor should maintain a 
 constant resistance no matter the power it is dissipating. In reality,
-resistors will have a power limit among other limitations and parameters.
+resistors will have a power limit among other limitations and properties.
 </p>
 
 <b> A Heater Circuit </b>
@@ -55,10 +54,10 @@ circuit for electronics. (Interestingly, writing a hello world program on a comp
 with extra steps) 
 </p>
 <p>
-Because of the voltage source current flows through the circuit and the
+Because there is a voltage across the resistor, current flows through the circuit and the
 resistor dissipates power and heats up. The first thing to note is that
 the current must be the same everywhere in the circuit. Remember that 
-current is essentially the flow of charge; how could the quantity of flow
+current is essentially the flow of charge; how could a quantity of flow
 be different if there is only one flow path? It can't be. The next thing to realize is that the voltage 
 across the resistor is the same as the voltage across the voltage source as the 
 voltage source maintains a constant voltage. The previous two ideas will generalized and stated
@@ -68,27 +67,27 @@ slightly more formally later.
 <b>Ohms Law </b>
 <p>
 To calculate the current through the resistor in the heater circuit we must use ohms law.
-Ohms law relates the voltage the voltage across it to the current through it. The most common 
+Ohms law relates the voltage a resistor to the current through it. The most common 
 equation for ohms law is given below:<br>
 V = IR<br>
 Rearranging this equation also leads to two other ways to express ohms law.<br>
 R = V/I<br>
 I = V/R<br>
 These equations also demonstrate what a resistor is in a better sense. A resistor is a component
-that creates voltage across it that is proportional to the current through it. This is also true
-in the opposite sense. The current through a resistor is linearly proportional to the voltage
+that creates voltage across it that is proportional to the current through it. And in the
+opposite sense. The current through a resistor is linearly proportional to the voltage
 across it. We can also use the I=V/R version of the equation to calculate the current in our
 heater circuit. 
 It should also be noted that ohms law is not a real law. This is because ohms law only works for
-resistors. That is, components that are made out of resistive or ohmic material. Many materials, 
+resistors. That is, components that are made out of constantly resistive or ohmic material. Many materials, 
 for example semiconductors, are not ohmic, so they do not obey ohms law.
 </p>
 
 <b>Electric Power Equation</b>
 <p>
 We also want to calculate the power dissipated in the resistor in the heater circuit. For this we
-must use the electric power equation which is given below:
-P = IV
+must use the electric power equation which is given below: <br>
+P = IV <br>
 The derivation of this equation is pretty strait forward. We simply combine the definition of voltage, 
 energy per unit charge; the definition of power, energy transfer per unit time; and the definition of
 current, charge per unit time. <br>
@@ -98,9 +97,9 @@ P = E/t <br>
 P = Vq/t <br>
 P = VI <br>
 Okay, so we know the voltage across the resistor and we calculated the current through it using ohms
-law, so we can now calculate the power using the power equation. It is also worth noting that the power
+law. We can now calculate the power using the power equation. It is also worth noting that the power
 dissipated by the resistor is equal to the power supplied to the circuit by the voltage source. Aka conservation
-of energy. There is technically also a sign convention to all this, but you only really need to know it 
+of energy. There is technically also a sign convention to this, but you only really need to know it 
 for certain derivations, not practical electronics work. 
 One last thing for now. You can combine ohms law and the power equation into the following formulas to 
 avoid doing unnecessary math. <br>
@@ -124,7 +123,7 @@ Ir1 + Ir2 + Ir3 = Vs <br>
 I(r1 + r2 + r3) = Vs <br>
 Vs/I = r1 + r2 + r3 <br>
 Rtotal = r1 + r2 + r3 <br>
-Basically, we can reduce the series resistors into an equivalent resistance which is equal to the sum of actual 
+We can reduce the series resistors into an equivalent resistance which is equal to the sum of actual 
 individual resistors. This is helpful to find out stuff about the circuit. We can reduce the three 
 resistors into one resistor by adding them up. We can then solve for the current using the source voltage and the
 equivalent resistance. Once we know the current, we can expand the circuit back out and find the voltage across 
@@ -137,36 +136,36 @@ The next case to look at is a parallel resistor circuit.
 </p>
 <img src="./pictures/resistor-parallel.png"></img>
 <p>
-Unlike the two series circuits that we have looked at so far, the current in this circuit varies.
+Unlike the two circuits that we have looked at so far, the current in this circuit is not the same everywhere.
 It is easy to find the current in each of the resistors as it is simply equal to Vs/Rx. Where
-Rx is the resistor value. Additionaly, we know that the current through the voltage source must
-be the sum of all the individule resistor currents. Again, think of current as a flow, the 
-flow must leave the voltage source, split into three seperate paths, then converge again. And the
+Rx is the resistor value of one of the resistors. Additionally, we know that the current through the voltage source must
+be the sum of all the individual resistor currents. Again, think of current as a flow, the 
+flow must leave the voltage source, split into three paths, then converge again. And the
 magnitude of the converged flow must be equal to the magnitude of the original flow. Let's put
-this into equation form to figure out how to reeuce the parallel resistors. That is, the resistor
+this into equation form to figure out how to reduce the parallel resistors. That is, the resistor
 that sets the same current as all the parallel resistors would. <br>
 Vs/R1 + Vs/R2 + Vs/R3 = Vs/Req = Isum <br>
 1/R1 + 1/R2 + 1/R3 = 1/Req <br>
 Req = 1/(1/R1 + 1/R2 + 1/R3) <br>
-We see that the resiprical of the parallel resistance is equal to the sum of the resipricals of 
-the individule resistors. 
+We see that the reciprocal of the parallel resistance is equal to the sum of the reciprocals of 
+the individual resistors. 
 </p>
 <b> Nodes </b>
 <p>
-In all the circuits shown so far we have components connected by lines. The lines represent wire
-and are assumed to be zero resistance. This is often approximatly true in real life circuits.
-Anyway, we call a connection of one or more components by these wires a node.</p>
-<b> Kirchoffs Current Law </b>
+In all the circuits shown so far we have components connected by lines. The lines represent wires
+and are assumed to be zero resistance. This is often approximately true in real life circuits.
+Anyway, we call a connection of two or more components by these wires a node.</p>
+<b> Kirchhoff's Current Law </b>
 <p>
 This has already been discussed implicitly. Basically, the current into any node is equal to
 the current out. One of the results of this is the current through any series circuit will
 always be equal. There is a more mathematical sign convention definition of this if you want.
 </p>
-<b> Kirchoffs Voltage Law </b>
+<b> Kirchhoff's Voltage Law </b>
 <p>
 This has also already been discussed implicitly. This basically says the voltage rise is equal
-to voltage drop in a circuit. Aka the voltage across your voltage source(s) is the same as the
-voltage across your other components. Also a more mathematical sign convension defention. 
+to voltage drop in a circuit. Less generally, the voltage across your voltage source(s) is the same as the
+voltage across your other components. A more mathematical sign convention definition exists. 
 </p>
 <a href="./electricity.html">Back</a>
 <a href="./capacitors.html">Next</a>
